--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,29 @@ agenda/agenda.runner/.project
 agenda/agenda.runner/.settings
 agenda/agenda.runner/runner/bundles
 agenda/agenda.runner/runner/cache
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.ContextBus.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.ContextHistory.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.DataRepresentation.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Device.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Disease.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Furniture.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Impairment.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Language.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Location.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.Profile.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.ServiceBus.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.SpaceConfiguration.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universAAL.org.UIBus.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.Health.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.HealthMeasurement.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.InteractionPreferencesProfile.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.PhThing.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.Shape.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.UIMainMenuProfile.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...ontology.universaal.org.UserIDProfile.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/http...www.w3.org.2006.vcard.ns.owl
+agenda/agenda.runner/runner/configurations/ctxt.che/store
+agenda/agenda.runner/runner/configurations/ui.dm/persistency
 agenda/agenda.runner/runner/felix/cache
 agenda/agenda.runner/runner/log
 agenda/agenda.runner/runner/org.apache.felix.main.Main
