--- a/.gitattributes
+++ b/.gitattributes
@@ -2469,6 +2469,10 @@ nutritional/nutritional.feature/ASL2.0.txt -text
 nutritional/nutritional.feature/NOTICE -text
 nutritional/nutritional.feature/pom.xml -text
 nutritional/nutritional.feature/src/main/features/na.xml -text
+nutritional/nutritional.karaf.feature/ASL2.0.txt -text
+nutritional/nutritional.karaf.feature/NOTICE -text
+nutritional/nutritional.karaf.feature/pom.xml -text
+nutritional/nutritional.karaf.feature/src/main/features/na.xml -text
 nutritional/nutritional.pom/pom.xml -text
 ontologies/ont.aalfficiencyscores/.classpath -text svneol=unset#text/plain
 ontologies/ont.aalfficiencyscores/.project -text svneol=unset#text/plain
