--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -67,6 +67,12 @@
 				<artifactId>health.biomedicalsensors.uiclient</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<!-- 	delete when updated -->
+			<dependency>
+				<groupId>org.universAAL.middleware</groupId>
+				<artifactId>mw.container.junit</artifactId>
+				<version>2.0.1-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
