--- a/safety_home/safety_home.service.client/pom.xml
+++ b/safety_home/safety_home.service.client/pom.xml
@@ -32,7 +32,6 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.safety</artifactId>
-			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -42,6 +41,11 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
 		</dependency>
+		<dependency>
+      		<groupId>org.apache.derby</groupId>
+      		<artifactId>derby</artifactId>
+      		<version>10.7.1.1</version>
+  		</dependency>		
 	</dependencies>
     <build>
 		<plugins>
@@ -56,6 +60,7 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Private-Package>org.universAAL.AALapplication.safety_home.service.uiclient</Private-Package>
+						<Import-Package>org.apache.derby.jdbc,*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
