--- a/ontologies/ont.ltba/pom.xml
+++ b/ontologies/ont.ltba/pom.xml
@@ -41,7 +41,7 @@
         <configuration>
           <instructions>
             <Bundle-Name>${project.name}</Bundle-Name>
-            <Bundle-Activator>org.universAAL.ontology.Activator</Bundle-Activator>
+<!--             <Bundle-Activator>org.universAAL.ontology.Activator</Bundle-Activator> -->
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Export-Package>org.universAAL.ontology.ltba</Export-Package>
