--- a/.gitattributes
+++ b/.gitattributes
@@ -1855,6 +1855,7 @@ help_when_out/hwo.servlet/src/main/resources/helpwhenoutdoor/whereis[!!-~]-[!!-~
 help_when_out/hwo.servlet/src/main/resources/helpwhenoutdoor/whereis.html -text
 help_when_out/hwo.servlet/src/main/resources/helpwhenoutdoor/whereis.js -text
 long_term_behav/Drools[!!-~]Reasoner[!!-~]QuickGuide[!!-~]v1.docx -text
+long_term_behav/LTBA-Configuration.zip -text
 long_term_behav/drools.event.publisher/.classpath -text
 long_term_behav/drools.event.publisher/.project -text
 long_term_behav/drools.event.publisher/.settings/org.eclipse.core.resources.prefs -text
