--- a/.gitattributes
+++ b/.gitattributes
@@ -585,6 +585,8 @@ food_shopping/utils/shopping/images/backup/icons_shLstBrowse_small.png -text
 food_shopping/utils/shopping/images/backup/icons_shLstCreate_small.png -text
 food_shopping/utils/shopping/images/backup/icons_shLstEdit_small.png -text
 food_shopping/utils/shopping/images/backup/icons_shLstName_small.png -text
+food_shopping/utils/shopping/images/icon_list_today.png -text
+food_shopping/utils/shopping/images/icon_list_week.png -text
 food_shopping/utils/shopping/images/icons_add_small.png -text
 food_shopping/utils/shopping/images/icons_back_small.png -text
 food_shopping/utils/shopping/images/icons_browse_small.png -text
