--- a/health/health.ui.client/pom.xml
+++ b/health/health.ui.client/pom.xml
@@ -41,6 +41,10 @@
       <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.container.osgi</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.universAAL.ontology</groupId>
+    	<artifactId>ont.recommendations</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
