--- a/.gitattributes
+++ b/.gitattributes
@@ -2567,6 +2567,7 @@ nutritional/nutritional.client/ASL2.0.txt -text
 nutritional/nutritional.client/NA_Service_E.0.1-SNAPSHOT.launch -text
 nutritional/nutritional.client/NA_Service_E.1.launch -text
 nutritional/nutritional.client/NOTICE.txt -text
+nutritional/nutritional.client/config/nutritional.client.conf.xml -text
 nutritional/nutritional.client/pom.xml -text
 nutritional/nutritional.client/src/main/java/na/miniDao/Advise.java -text
 nutritional/nutritional.client/src/main/java/na/miniDao/AdviseTime.java -text
