--- a/medication/medication.manager.ui/src/main/resources/medication-ui.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui.properties
@@ -1,3 +1,4 @@
+medication.manager.ui.main.menu=Medication Manager Main Menu
 medication.manager.ui.welcome=Welcome To the MedicationManager Service!
 medication.manager.ui.title=Medication Manager
 medication.manager.ui.close=Close
