--- a/safety_home/safety.pom/pom.xml
+++ b/safety_home/safety.pom/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>new_services.pom</artifactId>
-		<version>E.3</version>
 		<relativePath>../../new_services.pom</relativePath>
+		<version>F.0</version>
 	</parent>
 
 	<artifactId>safety.pom</artifactId>
-	<version>E.3</version>
+	<version>F.0</version>
 	<packaging>pom</packaging>
 	<name>Safety Home AAL Service</name>
 	<url>http://forge.universaal.org/wiki/new_services:Safety_Home_universAAL_service</url>
