--- a/safety_home/safety_home.service.client/pom.xml
+++ b/safety_home/safety_home.service.client/pom.xml
@@ -4,7 +4,7 @@
    <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>safety.pom</artifactId>
-  	<version>E.3</version>
+  	<version>F.0</version>
   	<relativePath>../safety.pom/</relativePath>
   </parent>
  
@@ -22,7 +22,7 @@
   </licenses>
     <dependencies>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
